fix?: trying to resolve contact display issue on iphone chrome

--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -25,7 +25,9 @@
 
 .card-container{
     margin-top: 30px;
+    display: -webkit-flex;
     display: flex;
+    -webkit-flex-wrap: wrap;
     flex-wrap: wrap;
     width: 100%;
     height: 200px;
